--- a/Projekt A/style.css
+++ b/Projekt A/style.css
@@ -56,7 +56,11 @@ button {
     font-size: 16px;
     cursor: pointer;
     font-weight: bold;
-    color: #722256;
+    color: #3b0a2a;
+    margin-bottom: 20px;
+    background-color: #f8cae0;
+    border-color: #000000;
+    border-radius: 10px;
 }
 
 #results {
